--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = src
+name = conventional-commit
 version = 0.1
 description = A pre-commit hook that checks commit messages for Conventional Commits formatting.
 license = Apache 2.0
@@ -11,4 +11,4 @@ python_requires = >=3.7
 
 [options.entry_points]
 console_scripts =
-    conventional-pre-commit = scr.hook:main
+    conventional-pre-commit = conventional-commit.hook:main
