--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,7 @@
 [metadata]
 name = conventional-commit
 version = 0.1
-description = A pre-commit hook that checks commit messages for Conventional Commits formatting.
-license = Apache 2.0
-license_file = LICENSE
+description = A pre-commit hook that checks commit messages for Conventional Commits formatting
 
 [options]
 packages = find:
