--- a/setup.cfg
+++ b/setup.cfg
@@ -9,4 +9,4 @@ python_requires = >=3.7
 
 [options.entry_points]
 console_scripts =
-    conventional-pre-commit = conventional-commit.hook:main
+    conventional-commit = conventional-commit.hook:main
