--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -1,6 +1,6 @@
 - id: conventional-commit
   name: Conventional Commit
-  entry: conventional-commit
+  entry: conventional_commit
   language: python
   description: Commit messages
   always_run: true
