--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = conventional-commit
+name = conventional_commit
 version = 0.1
 description = A pre-commit hook that checks commit messages for Conventional Commits formatting
 
@@ -9,4 +9,4 @@ python_requires = >=3.7
 
 [options.entry_points]
 console_scripts =
-    conventional-commit = conventional-commit.hook:main
+    conventional_commit = conventional_commit.hook:main
